<resources>
    <string name="app_name">DiffUtils_In_Recycler</string>
    <string name="user_name">Mohamed</string>
    <string name="facebook">Facebook</string>
    <string name="email_or_phone_number">Email or phone number</string>
    <string name="password">password</string>
    <string name="log_in">Log In</string>
    <string name="sign_up_for_facebook">Sign Up for Facebook</string>
    <string name="help_center">help center</string>
    <string name="login_facebook_fo_lign_n_www_facebook_com">login facebook fo lign \n www.facebook.com</string>
    <string name="like">Like</string>
    <string name="share">Share</string>
    <string name="comment">Comment</string>
    <string name="like_btn">Like</string>
    <string name="_2_ht">2 ht .</string>
    <string name="_12">12</string>
    <string name="_1_share">1 Share .</string>
</resources>