<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/iv_profile"
        android:layout_width="55dp"
        android:layout_height="55dp"
        android:src="@drawable/user_icon"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="20dp"
        android:text="@string/user_name"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@id/iv_profile"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_timer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_2_ht"
        app:layout_constraintStart_toStartOf="@id/tv_username"
        app:layout_constraintTop_toBottomOf="@id/tv_username" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:layout_width="22dp"
        android:layout_height="22dp"
        android:layout_marginStart="5dp"
        android:src="@drawable/ic_public"
        app:layout_constraintStart_toEndOf="@id/tv_timer"
        app:layout_constraintTop_toBottomOf="@id/tv_username" />

    <TextView
        android:id="@+id/tv_postcontent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/iv_profile"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/login_facebook_fo_lign_n_www_facebook_com"
        android:textSize="13sp"
        android:textColor="@color/black"
        android:layout_marginTop="20dp"
        android:layout_marginStart="10dp"/>
    <ImageView
        android:id="@+id/iv_imagecontent"
        android:layout_width="match_parent"
        android:layout_height="300dp"
app:layout_constraintTop_toBottomOf="@id/tv_postcontent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:src="@tools:sample/avatars"
        android:scaleType="fitXY"
        android:background="@color/black"/>

    <ImageView
        android:id="@+id/ic_like"
        android:layout_width="25dp"
        android:layout_height="25dp"
        app:layout_constraintTop_toBottomOf="@id/iv_imagecontent"
        app:layout_constraintStart_toStartOf="parent"
        android:src="@drawable/ic_up"
        android:layout_margin="14dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/ic_like"
        android:text="@string/_12"
        android:textColor="@color/black"
        android:layout_marginTop="18dp"
        android:layout_marginStart="4dp"
        app:layout_constraintTop_toBottomOf="@id/iv_imagecontent"
        />
    <ImageView
        android:id="@+id/more"
        android:layout_width="24dp"
        android:layout_height="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_imagecontent"
        android:src="@drawable/ic_more"
        android:layout_marginEnd="5dp"
        android:layout_marginTop="14dp"/>



    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/iv_more"
        android:layout_width="24dp"
        android:layout_height="24dp"
        app:layout_constraintTop_toBottomOf="@id/iv_imagecontent"
        app:layout_constraintEnd_toStartOf="@id/more"
        android:src="@color/black"
        android:layout_marginTop="14dp"
        />




    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        app:layout_constraintEnd_toStartOf="@id/iv_more"
        app:layout_constraintTop_toBottomOf="@id/iv_imagecontent"
        android:text="@string/_1_share"
        />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/ic_like"
            android:weightSum="3"
            android:orientation="horizontal">
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                style="@style/Widget.Material3.Button.TextButton"
                android:text="@string/like_btn"
                app:icon="@drawable/ic_up"
                android:backgroundTint="@color/white"
                android:textColor="@color/black"
                               />
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                style="@style/Widget.Material3.Button.TextButton"
                android:text="@string/comment"
                android:backgroundTint="@color/white"
                app:icon="@drawable/ic_logo"
                android:textColor="@color/black"
                />
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                style="@style/Widget.Material3.Button.TextButton"
                android:text="@string/share"
                android:backgroundTint="@color/white"
                android:textColor="@color/black"
                app:icon="@drawable/ic_more"
                />
        </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>